--- a/public/html/home.html
+++ b/public/html/home.html
@@ -1,12 +1,65 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
+    <link rel="stylesheet" href="../css/style.css">
+    <link rel="shortcut icon" href="../resources/logo.jpeg" type="image/x-icon">
+    <title>JaggaCode!</title>
 </head>
+
 <body>
-    innovathon
+    <div class="home-page">
+        <div class="home-page-navbar z-depth-3">
+            <div class="home-navbar-left">
+                <div class="navbar-logo">
+                    <a href="/dashboard" title="Home" class="navbar-logo-link">
+                        <div class="navbar-logo-img">
+                            <img class="navbar-img" src="../resources/logo.jpeg" alt="">
+                        </div>
+                        <div class="navbar-logo-title">
+                            JaggaCode
+                        </div>
+                    </a>
+
+                </div>
+            </div>
+
+            <div class="home-navbar-right">
+                <form action="/register" class="navbar-register">
+                    <button class="waves-effect waves-light btn user-register-but">Sign Up</button>
+                </form>
+                <form action="/login" class="navbar-login">
+                    <button class="waves-effect waves-light btn user-login-but">Login</button>
+                </form>
+            </div>
+        </div>
+
+        <div class="home-page-body">
+            <div class="home-body-head">
+                <div class="home-page-info">
+                    Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore
+                    et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut
+                    aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
+                    cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in
+                    culpa qui officia deserunt mollit anim id est laborum.
+                </div>
+
+                <div class="home-page-img">
+                    <img class="home-img" src="../resources/home img.jpeg" alt="">
+                </div>
+
+            </div>
+
+        </div>
+
+    </div>
+
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
+    <script src="../js/home.js"></script>
 </body>
+
 </html>
