login by google temporarily completed

--- a/public/html/home.html
+++ b/public/html/home.html
@@ -43,7 +43,7 @@
               Sign Up
             </button>
           </form>
-          <form action="/login" class="navbar-login">
+          <form action="/auth/google" class="navbar-login">
             <button class="waves-effect waves-light btn user-login-but">
               Login
             </button>
