login logout completed, handle setup form and route completed

--- a/public/html/dashboard.html
+++ b/public/html/dashboard.html
@@ -55,7 +55,7 @@
               <div class="navbar-profile-img">SJ</div>
             </a>
           </div>
-          <form action="/logout" class="navbar-logout">
+          <form action="/user/logout" class="navbar-logout">
             <button class="waves-effect waves-light btn user-logout-but">
               Logout
             </button>
