--- a/public/html/profile.html
+++ b/public/html/profile.html
@@ -1,27 +1,23 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link
-      rel="stylesheet"
-      href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css"
-    />
-    <link rel="stylesheet" href="../css/profile.css" />
-    <link
-      rel="shortcut icon"
-      href="../resources/logo.png"
-      type="image/x-icon"
-    />
-    <title>Profile</title>
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css" />
+  <link rel="stylesheet" href="../css/profile.css" />
+  <link rel="shortcut icon" href="../resources/logo.png" type="image/x-icon" />
+  <title>Profile</title>
 </head>
+
 <body>
-    Profile
-    <div class="profile-container">
-        <div class="image-div">
-        </div>
+  Profile
+  <div class="profile-container">
+    <div class="image-div">
     </div>
+  </div>
 </body>
 <script src="../js/profile.js"></script>
+
 </html>
