profile page updated

--- a/public/html/userSetup.html
+++ b/public/html/userSetup.html
@@ -8,6 +8,9 @@
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css" />
   <link rel="stylesheet" href="../css/style.css" />
   <link rel="shortcut icon" href="../resources/logo.png" type="image/x-icon" />
+  <link rel="preconnect" href="https://fonts.googleapis.com" />
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+  <link href="https://fonts.googleapis.com/css2?family=Abril+Fatface&display=swap" rel="stylesheet" />
   <title>JuggaCode!</title>
 </head>
 
@@ -40,7 +43,7 @@
       <div class="setup-form-body">
         <form action="/user/setup" class="setup-form" method="POST">
           <div class="codeforces-id">
-            <div class="setup-ids">Codeforces Username</div>
+            <div class="setup-ids required">Codeforces Username</div>
             <input class="setup-fields" type="text" name="codeforces" id="" placeholder="Enter Codeforces Username"
               required />
           </div>
